<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:src="@drawable/img_ilham"/>

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp"
                android:elevation="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/label_name"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/label_name"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=": " />

                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bio_name"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/label_address"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/label_address"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=": " />

                        <TextView
                            android:id="@+id/tv_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bio_address"/>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/label_hobby"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/label_hobby"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=": " />

                        <TextView
                            android:id="@+id/tv_hobby"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bio_hobby"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/label_quote"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/label_quote"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=": " />

                        <TextView
                            android:id="@+id/tv_quote"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bio_quote"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</FrameLayout>